hphp/hack/test/typecheck/expression_trees/static_static_method_call.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

abstract class MyClass {
  public abstract static function bar(
    ExampleContext $_,
  ): Awaitable<ExampleExpression<ExampleFunction<(function(ExampleString): ExampleInt)>>>;

  public function test(): void {
    $fun_call = ExampleDsl`static::bar("baz")`;
  }
}
